# cdn-framework

./: .clang-tidy  .cmake-format.py  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  vcpkg.json
app/: main.cpp
app/sdk/: Compress.cpp  DropBox.cpp
scripts/: build.sh  format.sh  lint.sh  regen.sh
